<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorBackground"
        >

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/labelHight"
        style="@style/TextViewNormal"/>

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="@dimen/inputWidth"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvHeight"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:hint="@string/hightInputHint"
        android:textAlignment="viewEnd"
        style="@style/Input"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etHeight"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/labelWeight"
        style="@style/TextViewNormal" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="@dimen/inputWidth"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:hint="@string/weightInputHint"
        android:textAlignment="viewEnd"
        style="@style/Input"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/actionCalculateBMI"
        android:layout_width="@dimen/inputWidth"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etWeight"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/calculateActionText"
        android:textAllCaps="false"
        android:textSize="@dimen/normalSize"
        android:layout_marginEnd="@dimen/marginInputEnd"/>

    <ImageView
        android:id="@+id/ivPicture"
        android:layout_width="@dimen/imageWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginNormal"
        android:contentDescription="@string/imageDescriptionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionCalculateBMI"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/actionCalculateBMI"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/TextViewBig"/>

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/TextViewBig"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="@dimen/descriptionWidth"
        android:layout_height="wrap_content"
        style="@style/TextViewNormal"
        android:textAlignment="viewEnd"
        android:padding="@dimen/paddingMedium"
        app:layout_constraintLeft_toRightOf="@+id/ivPicture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"/>

</android.support.constraint.ConstraintLayout>
